Fix username color in collapsed comments
This had been changed in ff4b91fd but was inadvertently reverted in the
theme overhaul.

--- a/tildes/scss/_themes.scss
+++ b/tildes/scss/_themes.scss
@@ -321,10 +321,6 @@ $theme-black: map-merge($theme-base, (
     header {
       color: $foreground-secondary;
       background-color: $background-primary;
-
-      .link-user {
-        color: $foreground-secondary;
-      }
     }
   }
 
